--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div style="text-align: center; height: 400px; width: 100%;" >
             <div style="text-align: center; display: inline-block;">
                 <h3>Fuel Levels</h3>
-                <p>Tank Full</p>
+                <p id='fuel'>Tank Full</p>
                 <h3>Astronaut Chat</h3>
                 <p>Houston, we are ready when you are!</p>
             </div>
@@ -23,10 +23,10 @@
                 <img src = "LaunchCode_rocketline_white.png" height = "75" width = "75" id = "rocket"/>
             </div>
             <div style = "text-align: center; display: inline-block;">
-                    <button>Up</button>
-                    <button>Down</button>
-                    <button>Right</button>
-                    <button>Left</button>
+                    <button id ='up'>Up</button>
+                    <button id='down'>Down</button>
+                    <button id='right'>Right</button>
+                    <button id='left'>Left</button>
                     <h3>Space Shuttle Height</h3>
                     <p id="spaceShuttleHeight">0</p><p style = "display: inline-block;"> miles</p>
             </div>
